--- a/code/backend/.env
+++ b/code/backend/.env
@@ -8,8 +8,8 @@ DATABASE_URL=sqlite:///database/invoices.db
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
+MAIL_USERNAME=mohammedayon2021@gmail.com
+MAIL_PASSWORD=Ayon
 
 UPLOAD_FOLDER=uploads
 MAX_FILE_SIZE=10485760
